# vtriage

./: .gitignore  .vtriage.toml  README.md  postit.md  pyproject.toml
.github/workflows/: oss-validate.yml  pytest.yml  testes.yml  vtriage.yml
examples/zipcpu/: .vtriage.toml  README.md
examples/zipcpu/scripts/: sim_harness.py
scripts/: ci_run.ps1  oss_clone.py  oss_run.py  pick_run.ps1  run.py  run_analyze.ps1  run_and_analyze.ps1  run_generate.ps1
src/vtriage/: analyzer.py  cli.py  config.py  vcd.py
tests/: test_analyzer_signature.py  test_e2e_analyze_run.py  test_e2e_run_dir.py  test_location_extract.py  test_vcs_sketch_hash.py  test_wave_cache.py
tests/integration/: test_cli_analyze_index_reuse.py
