[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtriage"
version = "0.1.0"
description = "FPGA/RTL verification triage from logs + waveforms (VCD/FST)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "jinja2>=3.1",
]

[project.scripts]
vtriage = "vtriage.cli:app"
